--- a/site/templates/twig/code-tables/list.twig
+++ b/site/templates/twig/code-tables/list.twig
@@ -33,25 +33,27 @@
 {% endblock %}
 
 <div class="list-group codes-list mb-3">
-	<div class="list-group-item bg-dark text-white">
-		{% block list_header_row %}
-			<div class="row align-items-center">
-				<div class="col-sm-3">
-					Code
-				</div>
-				<div class="col-sm-6">
-					Description
-				</div>
-				<div class="col-sm-3 text-center">
-					{% if page.is_print() == false %}
-						<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
-							<i class="fa fa-plus" aria-hidden="true"></i> Add Code
-						</button>
-					{% endif %}
+	{% block header_div %}
+		<div class="list-group-item bg-dark text-white">
+			{% block list_header_row %}
+				<div class="row align-items-center">
+					<div class="col-sm-3">
+						Code
+					</div>
+					<div class="col-sm-6">
+						Description
+					</div>
+					<div class="col-sm-3 text-center">
+						{% if page.is_print() == false %}
+							<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
+								<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+							</button>
+						{% endif %}
+					</div>
 				</div>
 			{% endblock %}
 		</div>
-	</div>
+	{% endblock %}
 	{% for code in codes %}
 		{# data-code attribute and class code is for the highlight on close #}
 		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
