--- a/site/templates/twig/code-tables/mar/crcd/list.twig
+++ b/site/templates/twig/code-tables/mar/crcd/list.twig
@@ -1,93 +1,90 @@
-{# codes is an array / ObjectCollection of CreditCardDigitGet #}
-<div class="list-group">
-	<div class="list-group-item bg-dark text-white">
+{% extends 'code-tables/list.twig' %}
+
+{% block header_div %}
+	<div class="list-group-item py-0">
 		<div class="row align-items-center">
-			<div class="col-5"></div>
-			<div class="bg-dark text-white text-center col-4">
+			<div class="col-sm-6"></div>
+			<div class="col-sm-4 text-center bg-dark text-white">
 				Service Charge Information
 			</div>
-			<div class="col-3"></div>
+			<div class="col-sm-2"></div>
 		</div>
+	</div>
+	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
-			<div class="col-1">
+			<div class="col-sm-1">
 				Digit
 			</div>
-			<div class="col-2">
+			<div class="col-sm-3">
 				Name
 			</div>
-			<div class="col-1">
-				GL Acct
+			<div class="col-sm-1">
+				GL Account
 			</div>
-			<div class="col-1">
+			<div class="col-sm-1">
 				Cust ID
 			</div>
-			<div class="col-1">
-				GL Acct
+			<div class="col-sm-1">
+				GL Account
 			</div>
-			<div class="col-1">
+			<div class="col-sm-1 text-right">
 				Rate
 			</div>
-			<div class="col-1">
-				Tran
+			<div class="col-sm-1 text-right">
+				Trans
 			</div>
-			<div class="col-1">
-				Srcg
+			<div class="col-sm-1 text-right">
+				Surcharge
 			</div>
-			<div class="col-3">
+			<div class="col-sm-2 text-center">
 				{% if page.is_print() == false %}
-					<a href="{{ page.url ~ '?code=new' }}" class="btn btn-light btn-sm">
+					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
-					</a>
+					</button>
 				{% endif %}
 			</div>
 		</div>
 	</div>
-	{% for code in codes %}
-		{# data-code attribute and class code is for the highlight on close #}
-		<div id="{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.has_success() ) ? 'bg-success text-white' : ''}}">
-			<div class="row align-items-center">
-				<div class="col-1">
-					{{ code.code }}
-				</div>
-				<div class="col-2">
-					{{ code.description }}
-				</div>
-				<div class="col-1">
-					{{ code.gl_account }}
-				</div>
-				<div class="col-1">
-					{{ code.custid }}
-				</div>
-				<div class="col-1">
-					{{ code.charge_gl_account }}
-				</div>
-				<div class="col-1">
-					{{ code.charge_rate }}
-				</div>
-				<div class="col-1">
-					{{ code.trans_cost }}
-				</div>
-				<div class="col-1">
-					{{ code.cc_surcharge_percent }}
-				</div>
-				<div class="col-3 text-center">
-					{% if recordlocker.function_locked(page.name, code.code) == false or recordlocker.function_locked_by_user(page.name, code.code) %}
-						{% if page.is_print() == false %}
-							<a href="{{ page.get_codetable_code_editURL(page.codetable, code.code) }}" class="btn btn-warning btn-sm">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</a>
-							&nbsp;
-							<a href="{{ page.get_codetable_code_deleteURL(page.codetable, code.code) }}" class="btn btn-danger btn-sm delete_button">
-								<i class="fa fa-trash" aria-hidden="true"></i> Delete
-							</a>
-						{% endif %}
-					{% else %}
-						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ recordlocker.get_locked_user(page.name, code.code) }}
-						</span>
-					{% endif %}
-				</div>
+{% endblock %}
+
+{% for code in codes %}
+	{% block code_row %}
+		<div class="row align-items-center">
+			<div class="col-sm-1">
+				{{ code.code }}
+			</div>
+			<div class="col-sm-3">
+				{{ code.description }}
+			</div>
+			<div class="col-sm-1">
+				{{ code.gl_account }}
+			</div>
+			<div class="col-sm-1">
+				{{ code.custid }}
+			</div>
+			<div class="col-sm-1">
+				{{ code.gl_account_charge }}
+			</div>
+			<div class="col-sm-1 text-right">
+				{{ code.servicerate|number_format(manager.fieldAttribute('servicerate', 'precision')) }}
+			</div>
+			<div class="col-sm-1 text-right">
+				{{ code.transactioncost|number_format(manager.fieldAttribute('transactioncost', 'precision')) }}
+			</div>
+			<div class="col-sm-1 text-right">
+				{{ code.cc_surcharge_percent|number_format(manager.fieldAttribute('cc_surcharge_percent', 'precision')) }}
+			</div>
+			<div class="col-sm-2 text-center">
+				{% if page.is_print() == false %}
+					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
+						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+					</button>
+					&nbsp;
+					<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+						<i class="fa fa-trash" aria-hidden="true"></i> Delete
+					</a>
+				{% endif %}
 			</div>
 		</div>
-	{% endfor %}
-</div>
+	{% endblock %}
+{% endfor %}
