--- a/site/templates/twig/util/bread-crumbs.twig
+++ b/site/templates/twig/util/bread-crumbs.twig
@@ -32,7 +32,7 @@
 
 	<ol class="breadcrumb rounded-0 mb-0 bg-dark text-white">
 		<li class="breadcrumb-item pull-right">
-			{{ page.get('pagetitle|headline|title') }}
+			{{ page.get('pagetitle|headline|title')|raw }}
 		</li>
 	</ol>
 </nav>
