--- a/site/templates/twig/code-tables/optm/sysop/display.twig
+++ b/site/templates/twig/code-tables/optm/sysop/display.twig
@@ -12,6 +12,10 @@
 	{% include 'code-tables/optm/bread-crumbs.twig' %}
 </div>
 
+<div class="mb-3">
+	{% include 'code-tables/optm/sysop/toolbar.twig' %}
+</div>
+
 {% if response %}
 	<div class="mb-3">
 		{% include 'code-tables/response.twig' %}
