--- a/site/templates/twig/dplus-menu/menu-search-form.twig
+++ b/site/templates/twig/dplus-menu/menu-search-form.twig
@@ -1,8 +1,7 @@
 <form action="{{ page.url }}" class="mb-3 allow-enterkey-submit">
-	<label for="ordn"><strong>Enter Dplus Menu / Function code</strong></label> &nbsp; &nbsp;
-	<div class="form-inline">
+	<div class="col-sm-12 px-0">
 		<div class="input-group">
-			<input type="text" class="form-control" name="q" autofocus>
+			<input type="text" class="form-control" name="q" placeholder="Menu / Function code" autofocus>
 			<div class="input-group-append">
 				<button type="submit" class="btn btn-success">
 					<i class="fa fa-search" aria-hidden="true"></i> Find
