--- a/site/templates/twig/dplus-menu/menu-search-page.twig
+++ b/site/templates/twig/dplus-menu/menu-search-page.twig
@@ -1,4 +1,6 @@
-{% include 'dplus-menu/menu-search-form.twig' %}
+<div class="col-sm-8 px-0">
+	{% include 'dplus-menu/menu-search-form.twig' %}
+</div>
 
 {% if items.count > 0 %}
 	{% include 'dplus-menu/menu-list.twig' %}
