--- a/site/templates/twig/dplus-menu/function-menu.twig
+++ b/site/templates/twig/dplus-menu/function-menu.twig
@@ -3,27 +3,30 @@
 {% set lastsegment = segments[segments|length] %}
 
 
+<div class="d-flex justify-content-between mb-3">
+	<div>
+		{% if page.parent().template == 'dplus-menu' or page.parent().template == 'warehouse-menu' %}
+			<a href="{{ page.parent().url }}" class="btn btn-primary">
+				<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
+				Back to {{ page.parent().title }}
+			</a>
+		{% endif %}
 
-{% include 'dplus-menu/menu-search-form.twig' with {'page': pages.get('/')} %}
+		{% if segments|length %}
+			{% set title = page.dplus_function ? page.dplus_function|upper : page.title %}
+			{% set title = page.wire('hooks').isHooked('Page::menuTitle()') ? page.menuTitle() : title %}
 
-<div class="mb-3">
-	{% if page.parent().template == 'dplus-menu' or page.parent().template == 'warehouse-menu' %}
-		<a href="{{ page.parent().url }}" class="btn btn-primary">
-			<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
-			Back to {{ page.parent().title }}
-		</a>
-	{% endif %}
-
-	{% if segments|length %}
-		{% set title = page.dplus_function ? page.dplus_function|upper : page.title %}
-		{% set title = page.wire('hooks').isHooked('Page::menuTitle()') ? page.menuTitle() : title %}
-
-		<a href="{{ page.url }}" class="btn btn-primary">
-			<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
-			Back to {{ title }}
-		</a>
-	{% endif %}
+			<a href="{{ page.url }}" class="btn btn-primary">
+				<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
+				Back to {{ title }}
+			</a>
+		{% endif %}
+	</div>
+	<div>
+		{% include 'dplus-menu/menu-search-form.twig' with {'page': pages.get('/')} %}
+	</div>
 </div>
+
 
 <div class="list-group dplus-menu">
 	{% for key, function  in functions %}
