--- a/site/templates/twig/code-tables/mar/cocom/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mar/cocom/js/classes/Form.js.twig
@@ -22,12 +22,13 @@ class CodeForm {
 			this.inputs.code.attr('readonly', 'true');
 			this.inputs.description.val(json.description);
 			this.inputs.iso2.val(json.iso2);
+			this.inputs.iso2.attr('readonly', 'true');
 			this.inputs.numeric.val(json.numeric);
+			this.inputs.numeric.attr('readonly', 'true');
 			this.inputs.custom_code.val(json.custom_code);
 			this.inputs.exchange_rate.val(json.exchange_rate);
 
 			if (parseInt(json.country_date) != 0) {
-				console.log(json.country_date);
 				this.inputs.country_date.text(moment(json.country_date).format('MM/DD/YYYY'));
 			}
 			this.triggerInputChanges();
@@ -41,7 +42,9 @@ class CodeForm {
 		this.inputs.code.removeAttr('readonly');
 		this.inputs.description.val('');
 		this.inputs.iso2.val('');
+		this.inputs.iso2.removeAttr('readonly');
 		this.inputs.numeric.val('');
+		this.inputs.numeric.removeAttr('readonly');
 		this.inputs.exchange_rate.val(this.config.fields.exchange_rate.min);
 		this.inputs.country_date.text('');
 	}
