FEAT: add unsaved changes alert

--- a/site/templates/twig/code-tables/mar/cocom/.js.twig
+++ b/site/templates/twig/code-tables/mar/cocom/.js.twig
@@ -33,6 +33,45 @@ $(function() {
 		formCode.form.attr('data-serialized', formCode.form.serialize());
 	});
 
+	$("#edit-code-modal").on('hide.bs.modal', function (e) {
+		var modal = $(this);
+		var form = formCode.inputs.form;
+		var originalValues = form.attr('data-serialized');
+
+		if (originalValues) {
+			if (originalValues != form.serialize()) {
+				e.preventDefault();
+
+				alert.unsavedChanges(function(confirmSave) {
+					if (confirmSave) {
+						form.submit();
+						return true;
+					}
+					form.attr('data-serialized', '');
+					modal.modal('hide');
+				});
+			}
+		}
+	});
+
+	$("#edit-code-modal").on('hidden.bs.modal', function (e) {
+		var form = formCode.inputs.form;
+
+		form.validate().resetForm();
+		form.find('.is-invalid').removeClass("is-invalid");
+		form.find('.is-valid').removeClass("is-valid");
+		form.find('.invalid-feedback').remove();
+		form.find('.valid-feedback').remove();
+
+		if (form.attr('data-code')) {
+			$('.code-table-alert').remove();
+			$('.bg-success').removeClass('bg-success text-white');
+			$('.highlight').removeClass('highlight');
+			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
+			$('html, body').animate({scrollTop: $('.code[data-code="'+form.attr('data-code')+'"]').offset().top,},700,'linear');
+		}
+	});
+
 	$("body").on("change", "input[name=code]", function(e) {
 		var input = $(this);
 		var code = input.val();
@@ -73,43 +112,6 @@ $(function() {
 		}
 		var rate = parseFloat(input.val());
 		input.val(rate.toFixed(formCode.config.fields.exchange_rate.precision));
-	});
-
-	$("#edit-code-modal").on('hide.bs.modal', function (e) {
-		var modal = $(this);
-		var form = formCode.inputs.form;
-		var originalValues = form.attr('data-serialized');
-
-		if (originalValues) {
-			if (originalValues != form.serialize()) {
-				e.preventDefault();
-
-				alert.unsavedChanges(function(confirmSave) {
-					if (confirmSave) {
-						form.submit();
-						return true;
-					}
-				});
-			}
-		}
-	});
-
-	$("#edit-code-modal").on('hidden.bs.modal', function (e) {
-		var form = formCode.inputs.form;
-
-		form.validate().resetForm();
-		form.find('.is-invalid').removeClass("is-invalid");
-		form.find('.is-valid').removeClass("is-valid");
-		form.find('.invalid-feedback').remove();
-		form.find('.valid-feedback').remove();
-
-		if (form.attr('data-code')) {
-			$('.code-table-alert').remove();
-			$('.bg-success').removeClass('bg-success text-white');
-			$('.highlight').removeClass('highlight');
-			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
-			$('html, body').animate({scrollTop: $('.code[data-code="'+form.attr('data-code')+'"]').offset().top,},700,'linear');
-		}
 	});
 
 /* =============================================================
