--- a/site/templates/twig/code-tables/mar/cpm/.js.twig
+++ b/site/templates/twig/code-tables/mar/cpm/.js.twig
@@ -30,6 +30,28 @@ $(function() {
 		} else {
 			formCode.inputs.code.focus();
 		}
+		formCode.form.attr('data-serialized', formCode.form.serialize());
+	});
+
+	$("#edit-code-modal").on('hide.bs.modal', function (e) {
+		var modal = $(this);
+		var form = formCode.inputs.form;
+		var originalValues = form.attr('data-serialized');
+
+		if (originalValues) {
+			if (originalValues != form.serialize()) {
+				e.preventDefault();
+
+				alert.unsavedChanges(function(confirmSave) {
+					if (confirmSave) {
+						form.submit();
+						return true;
+					}
+					form.attr('data-serialized', '');
+					modal.modal('hide');
+				});
+			}
+		}
 	});
 
 	$("body").on("change", "input[name=code]", function(e) {
