--- a/site/templates/twig/code-tables/mar/cocom/.js.twig
+++ b/site/templates/twig/code-tables/mar/cocom/.js.twig
@@ -7,24 +7,15 @@ $(function() {
 
 /* =============================================================
 	Event Functions
+	hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
 ============================================================= */
-	$('#edit-code-modal').on('show.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal  = $(this);
-		var code   = button.data('code');
-		modal.find('.modal-title').text('Add Code');
-
-		if (code) {
-			modal.find('.modal-title').text('Edit Code ' + code);
-		}
-		formCode.updateInputsFromJson(button.data('json'));
-	});
+	{% include 'code-tables/js/events/show-shown.js.twig' %}
 
 	$('#edit-code-modal').on('shown.bs.modal', function (event) {
 		var button = $(event.relatedTarget); // Button that triggered the modal
 		var modal  = $(this);
 		var code   = button.data('code');
-
+	
 		if (code) {
 			formCode.inputs.custom_code.focus();
 		} else {
@@ -32,46 +23,7 @@ $(function() {
 		}
 		formCode.form.attr('data-serialized', formCode.form.serialize());
 	});
-
-	$("#edit-code-modal").on('hide.bs.modal', function (e) {
-		var modal = $(this);
-		var form = formCode.inputs.form;
-		var originalValues = form.attr('data-serialized');
-
-		if (originalValues) {
-			if (originalValues != form.serialize()) {
-				e.preventDefault();
-
-				alert.unsavedChanges(function(confirmSave) {
-					if (confirmSave) {
-						form.submit();
-						return true;
-					}
-					form.attr('data-serialized', '');
-					modal.modal('hide');
-				});
-			}
-		}
-	});
-
-	$("#edit-code-modal").on('hidden.bs.modal', function (e) {
-		var form = formCode.inputs.form;
-
-		form.validate().resetForm();
-		form.find('.is-invalid').removeClass("is-invalid");
-		form.find('.is-valid').removeClass("is-valid");
-		form.find('.invalid-feedback').remove();
-		form.find('.valid-feedback').remove();
-
-		if (form.attr('data-code')) {
-			$('.code-table-alert').remove();
-			$('.bg-success').removeClass('bg-success text-white');
-			$('.highlight').removeClass('highlight');
-			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
-			$('html, body').animate({scrollTop: $('.code[data-code="'+form.attr('data-code')+'"]').offset().top,},700,'linear');
-		}
-	});
-
+	
 	$("body").on("change", "input[name=code]", function(e) {
 		var input = $(this);
 		var code = input.val();
