--- a/site/templates/twig/code-tables/mar/cpm/.js.twig
+++ b/site/templates/twig/code-tables/mar/cpm/.js.twig
@@ -7,52 +7,10 @@ $(function() {
 
 /* =============================================================
 	Event Functions
+	hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
 ============================================================= */
-	$('#edit-code-modal').on('show.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal  = $(this);
-		var code   = button.data('code');
-		modal.find('.modal-title').text('Add Code');
+	{% include 'code-tables/js/events/show-shown.js.twig' %}
 
-		if (code) {
-			modal.find('.modal-title').text('Edit Code ' + code);
-		}
-		formCode.updateInputsFromJson(button.data('json'));
-	});
-
-	$('#edit-code-modal').on('shown.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal  = $(this);
-		var code   = button.data('code');
-
-		if (code) {
-			formCode.inputs.description.focus();
-		} else {
-			formCode.inputs.code.focus();
-		}
-		formCode.form.attr('data-serialized', formCode.form.serialize());
-	});
-
-	$("#edit-code-modal").on('hide.bs.modal', function (e) {
-		var modal = $(this);
-		var form = formCode.inputs.form;
-		var originalValues = form.attr('data-serialized');
-
-		if (originalValues) {
-			if (originalValues != form.serialize()) {
-				e.preventDefault();
-
-				alert.unsavedChanges(function(confirmSave) {
-					if (confirmSave) {
-						form.submit();
-						return true;
-					}
-					form.attr('data-serialized', '');
-					modal.modal('hide');
-				});
-			}
-		}
-	});
 
 	$("body").on("change", "input[name=code]", function(e) {
 		var input = $(this);
