Update dplus nav

--- a/site/templates/twig/dplus-menu/menu-search-page.twig
+++ b/site/templates/twig/dplus-menu/menu-search-page.twig
@@ -1,5 +1,8 @@
-<div class="col-sm-8 px-0">
-	{% include 'dplus-menu/menu-search-form.twig' %}
+<div class="row">
+	<div class="col-sm-9"></div>
+	<div class="col-sm-3">
+		{% include 'dplus-menu/menu-search-form.twig' %}
+	</div>
 </div>
 
 {% if items.count > 0 %}
