--- a/site/templates/twig/dplus-menu/menu-search-page.twig
+++ b/site/templates/twig/dplus-menu/menu-search-page.twig
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-sm-9"></div>
 	<div class="col-sm-3">
-		{% include 'dplus-menu/menu-search-form.twig' %}
+		{% include 'dplus-menu/menu-search-form.twig' with {'page': pages.get('/') } %}
 	</div>
 </div>
 
