FEAT: add unsaved changes alert

--- a/site/templates/twig/code-tables/map/bum/.js.twig
+++ b/site/templates/twig/code-tables/map/bum/.js.twig
@@ -7,30 +7,10 @@ $(function() {
 
 /* =============================================================
 	Event Functions
+	hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
 ============================================================= */
-	$('#edit-code-modal').on('show.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal  = $(this);
-		var code   = button.data('code');
-		modal.find('.modal-title').text('Add Code');
+	{% include 'code-tables/js/events/show-shown.js.twig' %}
 
-		if (code) {
-			modal.find('.modal-title').text('Edit Code ' + code);
-		}
-		formCode.updateInputsFromJson(button.data('json'));
-	});
-
-	$('#edit-code-modal').on('shown.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal  = $(this);
-		var code   = button.data('code');
-
-		if (code) {
-			formCode.inputs.description.focus();
-		} else {
-			formCode.inputs.code.focus();
-		}
-	});
 
 	$("body").on("change", "input[name=code]", function(e) {
 		var input = $(this);
@@ -127,24 +107,4 @@ $(function() {
 			}
 		}
 	});
-
-/* =============================================================
-	Form Functions
-============================================================= */
-	$("#edit-code-modal").on('hidden.bs.modal', function (e) {
-		var form = formCode.inputs.form;
-		form.validate().resetForm();
-		form.find('.is-invalid').removeClass("is-invalid");
-		form.find('.is-valid').removeClass("is-valid");
-		form.find('.invalid-feedback').remove();
-		form.find('.valid-feedback').remove();
-
-		if (form.attr('data-code')) {
-			$('.code-table-alert').remove();
-			$('.bg-success').removeClass('bg-success text-white');
-			$('.highlight').removeClass('highlight');
-			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
-			$('html, body').animate({scrollTop: $('.code[data-code="'+form.attr('data-code')+'"]').offset().top,},700,'linear');
-		}
-	});
-})
+});
