Create mvc for MTM

--- a/site/templates/twig/code-tables/edit-modal.twig
+++ b/site/templates/twig/code-tables/edit-modal.twig
@@ -2,7 +2,7 @@
 <div class="modal fade" id="edit-code-modal" tabindex="-1" role="dialog" aria-labelledby="edit-code-modal-title" aria-hidden="true">
 	<div class="modal-dialog {{ size ? 'modal-' ~ size : ''}}" role="document">
 		<div class="modal-content">
-			<div class="modal-header">
+			<div class="modal-header bg-light">
 				<h5 class="modal-title" id="edit-code-modal-title">Modal title</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
