--- a/site/templates/twig/dplus-menu/display.twig
+++ b/site/templates/twig/dplus-menu/display.twig
@@ -1,10 +1,10 @@
 <div class="row">
-	<div class="col-sm-9">
+	<div class="col-6 col-sm-9">
 		<a href="{{ page.parent.url }}" class="btn btn-primary">
 			{{ page.parent.title }}
 		</a>
 	</div>
-	<div class="col-sm-3">
+	<div class="col-6 col-sm-3">
 		{% include 'dplus-menu/menu-search-form.twig' %}
 	</div>
 </div>
