--- a/site/templates/twig/dplus-menu/function-menu.twig
+++ b/site/templates/twig/dplus-menu/function-menu.twig
@@ -8,7 +8,7 @@
 		{% if page.parent().template == 'dplus-menu' or page.parent().template == 'warehouse-menu' %}
 			<a href="{{ page.parent().url }}" class="btn btn-primary">
 				<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
-				Back to {{ page.parent().title }}
+				Back <span class="d-none d-sm-inline">to {{ page.parent().title }}</span>
 			</a>
 		{% endif %}
 
@@ -18,7 +18,7 @@
 
 			<a href="{{ page.url }}" class="btn btn-primary">
 				<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
-				Back to {{ title }}
+				Back <span class="d-none d-sm-inline">to {{ title }}</span>
 			</a>
 		{% endif %}
 	</div>
@@ -27,23 +27,26 @@
 	</div>
 </div>
 
-
 <div class="list-group dplus-menu">
 	{% for key, function  in functions %}
 		<a href="{{ page.subfunctionUrl(key) }}" class="list-group-item list-group-item-action">
 			<div class="row align-items-center">
-				<div class="col-4">
+				<div class="col-1">
 					<i class="fa fa-microchip" aria-hidden="true"></i>
-					&nbsp; &nbsp;
-					<strong>
-						{{ function.title }} {% if function.permission %} ({{ function.permission }}) {% endif %}
-					</strong>
-					<br>
 				</div>
-				<div class="col-8">
-					<small>
-						{{ function.summary }}
-					</small>
+				<div class="col-11">
+					<div class="row">
+						<div class="col-sm-6">
+							<strong>
+								{{ function.title }} {% if function.permission %} ({{ function.permission }}) {% endif %}
+							</strong>
+						</div>
+						<div class="col-sm-6">
+							<small>
+								{{ function.summary }}
+							</small>
+						</div>
+					</div>
 				</div>
 			</div>
 		</a>
