--- a/site/templates/twig/dplus-menu/menu-list.twig
+++ b/site/templates/twig/dplus-menu/menu-list.twig
@@ -13,19 +13,24 @@
 	{% for item in items %}
 		<a href="{{ item.url }}" class="list-group-item list-group-item-action">
 			<div class="row align-items-center">
-				<div class="col-sm-4">
+				<div class="col-1">
 					{% if item.template == 'dplus-menu' or item.template == 'warehouse-menu' %}
 						<i class="fa fa-list" aria-hidden="true"></i>
 					{% else %}
 						<i class="fa fa-microchip" aria-hidden="true"></i>
-					{% endif %} &nbsp; &nbsp;
-					<strong>{{ item.title|raw }} {{ item.dplus_function ? '(' ~ item.dplus_function ~ ')' }}</strong>
-					<br>
+					{% endif %} 
 				</div>
-				<div class="col-sm-8">
-					<small>
-						{{ item.summary|raw }}
-					</small>
+				<div class="col-11">
+					<div class="row">
+						<div class="col-sm-6">
+							<strong>{{ item.title|raw }} {{ item.dplus_function ? '(' ~ item.dplus_function ~ ')' }}</strong>
+						</div>
+						<div class="col-sm-6">
+							<small>
+								{{ item.summary|raw }}
+							</small>
+						</div>
+					</div>
 				</div>
 			</div>
 		</a>
