TWIG: handle mobile bread-crumbs

--- a/site/templates/twig/util/bread-crumbs.twig
+++ b/site/templates/twig/util/bread-crumbs.twig
@@ -30,8 +30,8 @@
 		{% endblock %}	
 	</ol>
 
-	<ol class="breadcrumb rounded-0 mb-0 bg-dark text-white">
-		<li class="breadcrumb-item pull-right">
+	<ol class="breadcrumb rounded-0 mb-0 bg-dark text-white flex-grow-1 flex-sm-grow-0">
+		<li class="breadcrumb-item pull-right w-100 text-center">
 			{{ page.get('pagetitle|headline|title')|raw }}
 		</li>
 	</ol>
