--- a/site/templates/twig/code-tables/list.twig
+++ b/site/templates/twig/code-tables/list.twig
@@ -11,8 +11,8 @@
 {% set lastsegment = segments[segments|length] %}
 
 {% block header %}
-	<div class="d-flex justify-content-between">
-		<div class="mb-3">
+	<div class="row">
+		<div class="col-sm-6 mb-3">
 			{% if page.is_print() %}
 				<button onclick="window.history.back();" class="btn btn-primary d-print-none">
 					<i class="fa fa-undo" aria-hidden="true"></i> Back
@@ -23,7 +23,7 @@
 				</button>
 			{% else %}
 				<a href="{{ page.menuUrl() }}" class="btn btn-primary">
-					<i class="fa fa-undo" aria-hidden="true"></i> Back to {{ page.menuTitle() }}
+					<i class="fa fa-undo" aria-hidden="true"></i> Back <span class="d-none d-sm-inline">to {{ page.menuTitle() }}</span>
 				</a>
 				&nbsp;
 				<a href="{{ page.get_printURL() }}" class="btn btn-primary">
@@ -31,46 +31,48 @@
 				</a>
 			{% endif %}
 		</div>
-
-		{% block search %}
-			<div class="d-flex justify-content-between">
+		<div class="col-sm-6 mb-3">
+			{% block search %}
 				<div>
-					<a href="{{ input.url() }}" class="btn btn-warning">
-						<i class="fa fa-times" aria-hidden="true"></i> Clear Search
-					</a>
-				</div>
-
-				<div>&nbsp; &nbsp; &nbsp;</div>
-
-				<form action="{{ input.url() }}" method="GET" class="allow-enterkey-submit column-filter">
-					<div class="input-group">
-						<div class="input-group-btn search-panel">
-							<div class="dropdown">
-								<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-									Search By <span class="searchby">{{ values.offsetExists('col') ? values.text('col')|capitalize : 'All' }}</span> <span class="caret"></span>
-								</button>
-								<div class="dropdown-menu column-options">
-									<a class="dropdown-item" href="#" value="">All</a>
-									<a class="dropdown-item" href="#" value="code">Code</a>
-									<a class="dropdown-item" href="#" value="description">Description</a>
-								</div>
+					<div class="d-flex justify-content-between flex-wrap">
+						{% if input.get.text('q') != '' %}
+							<div class="order-2 order-sm-1 flex-grow-1 mt-1">
+								<a href="{{ input.url() }}" class="btn btn-warning">
+									<i class="fa fa-times" aria-hidden="true"></i> Clear Search
+								</a>
 							</div>
-						</div>
-		
-						<input class="form-control form-group inline" type="text" name="q" value="{{ values.text('q') }}">
-						<input type="hidden" name="col" value="all">
-						
-						<span class="input-group-btn">
-							<button class="btn btn-light" type="submit">
-								<i class="fa fa-search"></i> <span class="sr-only">Search</span>
-							</button>
-						</span>
+						{% endif %}
+
+						<form action="{{ input.url() }}" method="GET" class="allow-enterkey-submit column-filter flex-grow-1 order-1 order-sm-2">
+							<div class="input-group">
+								<div class="input-group-btn search-panel">
+									<div class="dropdown">
+										<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+											Search By <span class="searchby">{{ values.offsetExists('col') ? values.text('col')|capitalize : 'All' }}</span> <span class="caret"></span>
+										</button>
+										<div class="dropdown-menu column-options">
+											<a class="dropdown-item" href="#" value="">All</a>
+											<a class="dropdown-item" href="#" value="code">Code</a>
+											<a class="dropdown-item" href="#" value="description">Description</a>
+										</div>
+									</div>
+								</div>
+				
+								<input class="form-control form-group inline" type="text" name="q" value="{{ values.text('q') }}">
+								<input type="hidden" name="col" value="all">
+								
+								<span class="input-group-btn">
+									<button class="btn btn-light" type="submit">
+										<i class="fa fa-search"></i> <span class="sr-only">Search</span>
+									</button>
+								</span>
+							</div>
+						</form>
 					</div>
-				</form>
-			</div>
-		{% endblock %}
+				</div>
+			{% endblock %}
+		</div>
 	</div>
-	
 {% endblock %}
 
 <div class="list-group codes-list mb-3">
@@ -78,16 +80,16 @@
 		<div class="list-group-item bg-dark text-white">
 			{% block list_header_row %}
 				<div class="row align-items-center">
-					<div class="col-sm-3">
+					<div class="col-3 col-sm-3">
 						Code
 					</div>
-					<div class="col-sm-6">
+					<div class="col-5 col-sm-6">
 						Description
 					</div>
-					<div class="col-sm-3 text-center">
+					<div class="col-4 col-sm-3 text-center">
 						{% if page.is_print() == false %}
 							<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
-								<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+								<i class="fa fa-plus" aria-hidden="true"></i> Add <span class="d-none d-sm-inline">Code</span>
 							</button>
 						{% endif %}
 					</div>
@@ -100,13 +102,13 @@
 		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
 			{% block code_row %}
 				<div class="row align-items-center">
-					<div class="col-sm-3">
+					<div class="col-3 col-sm-3">
 						{{ code.code }}
 					</div>
-					<div class="col-sm-6">
+					<div class="col-5 col-sm-6">
 						{{ code.description }}
 					</div>
-					<div class="col-sm-3 text-center">
+					<div class="col-4 col-sm-3 text-center">
 						{% if page.is_print() == false %}
 							<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
 								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
