Create PTY3 mvc

--- a/site/templates/twig/api/lookup/misc/country-codes/list.twig
+++ b/site/templates/twig/api/lookup/misc/country-codes/list.twig
@@ -10,7 +10,7 @@
 	{% for country in results %}
 		<tr>
 			<td>
-				<a href="#" class="link country-link" data-code="{{ country.code }}" data-rate="{{ country.exchange_rate }}" data-description="{{ country.description }}">
+				<a href="#" class="link country-link code-link" data-code="{{ country.code }}" data-rate="{{ country.exchange_rate }}" data-description="{{ country.description }}">
 					{{ country.code }}
 				</a>
 			</td>
