FEAT: use show-shown event snippet

--- a/site/templates/twig/code-tables/mgl/ttm/.js.twig
+++ b/site/templates/twig/code-tables/mgl/ttm/.js.twig
@@ -15,7 +15,7 @@ $(function() {
 		modal.find('.modal-title').text('Add Code');
 
 		if (code) {
-			modal.find('.modal-title').text('Edit Code ' + code);
+			modal.find('.modal-title').text('Edit Code');
 		}
 		formCode.updateInputsFromJson(button.data('json'));
 	});
