--- a/site/templates/twig/code-tables/msa/lgrp/.js.twig
+++ b/site/templates/twig/code-tables/msa/lgrp/.js.twig
@@ -7,30 +7,9 @@ $(function() {
 
 /* =============================================================
 	Event Functions
+	TODO:hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
 ============================================================= */
-	$('#edit-code-modal').on('show.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal  = $(this);
-		var code   = button.data('code');
-
-		modal.find('.modal-title').text('Add Code');
-		if (code) {
-			modal.find('.modal-title').text('Edit Code ' + code);
-		}
-		formCode.updateInputsFromJson(button.data('json'));
-	});
-
-	$('#edit-code-modal').on('shown.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal  = $(this);
-		var code   = button.data('code');
-
-		if (code) {
-			formCode.inputs.description.focus();
-		} else {
-			formCode.inputs.code.focus();
-		}
-	});
+	{% include 'code-tables/js/events/show-shown.js.twig' %}
 
 	$("body").on("change", "input[name=code]", function(e) {
 		var input = $(this);
