--- a/site/templates/twig/code-tables/mar/cocom/.js.twig
+++ b/site/templates/twig/code-tables/mar/cocom/.js.twig
@@ -10,6 +10,8 @@ $(function() {
 	hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
 ============================================================= */
 	{% include 'code-tables/js/events/show-shown.js.twig' %}
+	{% include 'code-tables/js/events/input-code-change.js.twig' %}
+	{% include 'code-tables/js/events/input-code-force-focus.js.twig' %}
 
 	$('#edit-code-modal').on('shown.bs.modal', function (event) {
 		var button = $(event.relatedTarget); // Button that triggered the modal
@@ -24,38 +26,6 @@ $(function() {
 		formCode.form.attr('data-serialized', formCode.form.serialize());
 	});
 	
-	$("body").on("change", "input[name=code]", function(e) {
-		var input = $(this);
-		var code = input.val();
-
-		server.validateCode(code, function(exists) {
-			if (exists === true) {
-				alert.codeExists(code, function(editCode) {
-					if (editCode) {
-						var modal = input.closest('.modal');
-
-						if (editCode) {
-							server.getCode(code, function(response) {
-								if (response) {
-									modal.find('.modal-title').text('Edit Code ' + code);
-									formCode.updateInputsFromJson(response);
-								}
-							});
-						} else {
-							modal.modal('hide');
-						}
-					}
-				});
-			}
-		});
-	});
-
-	$("body").on("focusin", "#code-form input:not(input[name=code])", function(e) {
-		if (formCode.inputs.code.val() == '') {
-			formCode.inputs.code.focus();
-		}
-	});
-
 	$("body").on("change", "input[name=exchange_rate]", function(e) {
 		var input = $(this);
 
