--- a/site/templates/twig/code-tables/mgl/dtm/.js.twig
+++ b/site/templates/twig/code-tables/mgl/dtm/.js.twig
@@ -11,32 +11,8 @@ $(function() {
 	TODO:hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
 ============================================================= */
 	{% include 'code-tables/js/events/show-shown.js.twig' %}
-
-	$("body").on("change", "input[name=code]", function(e) {
-		var input = $(this);
-		var code = input.val();
-
-		server.validateCode(code, function(exists) {
-			if (exists === true) {
-				alert.codeExists(code, function(editCode) {
-					var modal = formCode.form.closest('.modal');
-
-					if (editCode) {
-						server.getCode(code, function(response) {
-							if (response) {
-								modal.find('.modal-title').text('Edit Code ' + code);
-								formCode.updateInputsFromJson(response);
-							} else {
-								modal.modal('hide');
-							}
-						});
-					} else {
-						modal.modal('hide');
-					}
-				});
-			}
-		});
-	});
+	{% include 'code-tables/js/events/input-code-change.js.twig' %}
+	{% include 'code-tables/js/events/input-code-force-focus.js.twig' %}
 
 	$("body").on("change", "input.glcode", function(e) {
 		var input = $(this);
@@ -81,12 +57,6 @@ $(function() {
 			alert.pctSumNot100(total, function() {
 
 			});
-		}
-	});
-
-	$("body").on("focusin", "#code-form input:not(input[name=code])", function(e) {
-		if (formCode.inputs.code.val() == '') {
-			formCode.inputs.code.focus();
 		}
 	});
 
