--- a/site/templates/twig/code-tables/min/spit/.js.twig
+++ b/site/templates/twig/code-tables/min/spit/.js.twig
@@ -10,39 +10,9 @@ $(function() {
 	TODO:hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
 ============================================================= */
 	{% include 'code-tables/js/events/show-shown.js.twig' %}
-
-	$("body").on("change", "input[name=code]", function(e) {
-		var input = $(this);
-		var code = input.val();
-
-		server.validateCode(code, function(exists) {
-			if (exists === true) {
-				alert.codeExists(code, function(editCode) {
-					var modal = formCode.form.closest('.modal');
-
-					if (editCode) {
-						server.getCode(code, function(response) {
-							if (response) {
-								modal.find('.modal-title').text('Edit Code ' + code);
-								formCode.updateInputsFromJson(response);
-							} else {
-								modal.modal('hide');
-							}
-						});
-					} else {
-						modal.modal('hide');
-					}
-				});
-			}
-		});
-	});
-
-	$("body").on("focusin", "#code-form input:not(input[name=code])", function(e) {
-		if (formCode.inputs.code.val() == '') {
-			formCode.inputs.code.focus();
-		}
-	});
-
+	{% include 'code-tables/js/events/input-code-change.js.twig' %}
+	{% include 'code-tables/js/events/input-code-force-focus.js.twig' %}
+	
 /* =============================================================
 	Validation Functions
 ============================================================= */
