--- a/site/templates/twig/code-tables/mpm/rcm/.js.twig
+++ b/site/templates/twig/code-tables/mpm/rcm/.js.twig
@@ -11,6 +11,8 @@ $(function() {
 	TODO:hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
 ============================================================= */
 	{% include 'code-tables/js/events/show-shown.js.twig' %}
+	{% include 'code-tables/js/events/input-code-change.js.twig' %}
+	{% include 'code-tables/js/events/input-code-force-focus.js.twig' %}
 
 	$("#edit-code-modal").on('hidden.bs.modal', function (e) {
 		var form = formCode.inputs.form;
@@ -26,38 +28,6 @@ $(function() {
 			$('.highlight').removeClass('highlight');
 			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
 			$('html, body').animate({scrollTop: $('.code[data-code="'+form.attr('data-code')+'"]').offset().top,},700,'linear');
-		}
-	});
-
-	$("body").on("change", "input[name=code]", function(e) {
-		var input = $(this);
-		var code = input.val();
-
-		server.validateCode(code, function(exists) {
-			if (exists === true) {
-				alert.codeExists(code, function(editCode) {
-					var modal = formCode.form.closest('.modal');
-
-					if (editCode) {
-						server.getCode(code, function(response) {
-							if (response) {
-								modal.find('.modal-title').text('Edit Code ' + code);
-								formCode.updateInputsFromJson(response);
-							} else {
-								modal.modal('hide');
-							}
-						});
-					} else {
-						modal.modal('hide');
-					}
-				});
-			}
-		});
-	});
-
-	$("body").on("focusin", "#code-form input:not(input[name=code])", function(e) {
-		if (formCode.inputs.code.val() == '') {
-			formCode.inputs.code.focus();
 		}
 	});
 
