--- a/site/templates/twig/code-tables/mso/rgasc/.js.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/.js.twig
@@ -8,7 +8,7 @@ $(function() {
 
 /* =============================================================
 	Event Functions
-	TODO:hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
+	hide, unsaved changes events is handled by scripts/code-tables/modal-events.js
 ============================================================= */
 	{% include 'code-tables/js/events/show-shown.js.twig' %}
 	{% include 'code-tables/js/events/input-code-change.js.twig' %}
