RQST: omit code value from modal title
Requested By: Roger

--- a/site/templates/twig/code-tables/mar/tm/.js.twig
+++ b/site/templates/twig/code-tables/mar/tm/.js.twig
@@ -154,7 +154,7 @@ $(function() {
 						if (editCode) {
 							server.getCode(code, function(response) {
 								if (response) {
-									modal.find('.modal-title').text('Edit Code ' + code);
+									modal.find('.modal-title').text('Edit Code');
 									formCode.updateInputsFromJson(response);
 								} else {
 									modal.modal('hide');
