--- a/site/templates/twig/code-tables/mgl/dtm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mgl/dtm/js/classes/Form.js.twig
@@ -58,7 +58,7 @@ class DtmForm {
 					if (editCode) {
 						server.getCode(code, function(response) {
 							if (response) {
-								modal.find('.modal-title').text('Edit Code ' + code);
+								modal.find('.modal-title').text('Edit Code');
 								formCode.updateInputsFromJson(response);
 							}
 						});
