--- a/site/templates/twig/code-tables/min/igcm/.js.twig
+++ b/site/templates/twig/code-tables/min/igcm/.js.twig
@@ -23,7 +23,7 @@ $(function() {
 					if (editCode) {
 						server.getCode(code, function(response) {
 							if (response) {
-								modal.find('.modal-title').text('Edit Code ' + code);
+								modal.find('.modal-title').text('Edit Code');
 								formCode.updateInputsFromJson(response);
 							} else {
 								modal.modal('hide');
@@ -92,7 +92,7 @@ $(function() {
 						if (editCode) {
 							server.getCode(code, function(response) {
 								if (response) {
-									modal.find('.modal-title').text('Edit Code ' + code);
+									modal.find('.modal-title').text('Edit Code');
 									formCode.updateInputsFromJson(response);
 								} else {
 									modal.modal('hide');
