--- a/site/templates/twig/code-tables/mpo/cnfm/.js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/.js.twig
@@ -2,8 +2,8 @@
 
 $(function() {
 	var server   = CnfmRequests.getInstance();
-	var alert    = CnfmAlerts.getInstance();
-	var formCode = CnfmForm.getInstance();
+	var alert    = CodeAlerts.getInstance();
+	var formCode = CodeForm.getInstance();
 
 /* =============================================================
 	Event Functions
