REFACTOR: update  to use base code-table twig files

--- a/site/templates/twig/code-tables/mpr/src/.js.twig
+++ b/site/templates/twig/code-tables/mpr/src/.js.twig
@@ -2,8 +2,8 @@
 
 $(function() {
 	var server   = SrcRequests.getInstance();
-	var alert    = SrcAlerts.getInstance();
-	var formCode = SrcForm.getInstance();
+	var alert    = CodeAlerts.getInstance();
+	var formCode = CodeForm.getInstance();
 
 /* =============================================================
 	Event Functions
