FEAT: add delete button, populate url

--- a/site/templates/twig/code-tables/map/vtm/form.twig
+++ b/site/templates/twig/code-tables/map/vtm/form.twig
@@ -60,6 +60,11 @@
 		<button type="submit" class="btn btn-success form_button">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 		</button>
+		<div>
+			<a href="{{ page.codeDeleteUrl('') }}" class="btn btn-danger delete_button collapse">
+				<i class="fa fa-trash" aria-hidden="true"></i> Delete
+			</a>
+		</div>
 		<button type="button" class="btn btn-warning" data-dismiss="modal">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</button>
