--- a/site/templates/twig/code-tables/mar/cocom/form.twig
+++ b/site/templates/twig/code-tables/mar/cocom/form.twig
@@ -109,6 +109,9 @@
 		<button type="submit" class="btn btn-success form_button">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 		</button>
+		<div>
+			
+		</div>
 		<button type="button" class="btn btn-warning" data-dismiss="modal">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</button>
