--- a/site/templates/twig/code-tables/map/vtm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/map/vtm/js/classes/Form.js.twig
@@ -16,6 +16,8 @@ class VtmForm {
 	}
 
 	updateInputsFromJson(json = null) {
+		this.updateDeleteLink(json);
+		
 		if (json) {
 			this.inputs.form.attr('data-code', json.code);
 			this.inputs.code.val(json.code);
@@ -36,4 +38,27 @@ class VtmForm {
 		this.inputs.production.val(this.config.fields.production.default);
 		this.inputs.competitor.val(this.config.fields.competitor.default);
 	}
+
+	updateDeleteLink(json = null) {
+		var button = this.form.find('a.delete_button');
+		if (button.length == 0) {
+			return false;
+		}
+		var uri = URI(button.attr('href'));
+		var data = uri.query(true);
+
+		if (json) {
+			data.code = json.code;
+			uri.query(data);
+			button.attr('href', uri.toString());
+			button.addClass('show');
+			return true;
+		}
+		data.code = '';
+		uri.query(data);
+		button.attr('href', uri.toString());
+		button.removeClass('show');
+		return true;
+	}
+	
 }
