--- a/site/templates/twig/code-tables/min/tarm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/min/tarm/js/classes/Form.js.twig
@@ -16,6 +16,8 @@ class TarmForm {
 	}
 
 	updateInputsFromJson(json = null) {
+		this.updateDeleteLink(json);
+
 		var inputs = this.inputs;
 		this.inputs.country.prop('checked', false);
 
@@ -41,4 +43,27 @@ class TarmForm {
 		this.inputs.number.val('');
 		this.inputs.percent.val('');
 	}
+
+	updateDeleteLink(json = null) {
+		var button = this.form.find('a.delete_button');
+		if (button.length == 0) {
+			return false;
+		}
+		var uri = URI(button.attr('href'));
+		var data = uri.query(true);
+
+		if (json) {
+			data.code = json.code;
+			uri.query(data);
+			button.attr('href', uri.toString());
+			button.addClass('show');
+			return true;
+		}
+		data.code = '';
+		uri.query(data);
+		button.attr('href', uri.toString());
+		button.removeClass('show');
+		return true;
+	}
+	
 }
