--- a/site/templates/twig/code-tables/mso/lsm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mso/lsm/js/classes/Form.js.twig
@@ -16,6 +16,8 @@ class LsmForm {
 	}
 
 	updateInputsFromJson(json = null) {
+		this.updateDeleteLink(json);
+		
 		if (json) {
 			this.inputs.form.attr('data-code', json.code);
 			this.inputs.code.val(json.code);
@@ -32,5 +34,27 @@ class LsmForm {
 		this.inputs.code.removeAttr('readonly');
 		this.inputs.description.val('');
 		this.inputs.updateinventorywatch.val('N');
+	}
+
+	updateDeleteLink(json = null) {
+		var button = this.form.find('a.delete_button');
+		if (button.length == 0) {
+			return false;
+		}
+		var uri = URI(button.attr('href'));
+		var data = uri.query(true);
+
+		if (json) {
+			data.code = json.code;
+			uri.query(data);
+			button.attr('href', uri.toString());
+			button.addClass('show');
+			return true;
+		}
+		data.code = '';
+		uri.query(data);
+		button.attr('href', uri.toString());
+		button.removeClass('show');
+		return true;
 	}
 }
